# adirfhook

./: CMakeLists.txt  README.md  build.sh  inject.sh
include/adirfhook/hook/: dlopenhook.h  hookmanager.h
src/: main.cpp
src/hook/: dlopenhook.cpp  hookmanager.cpp
